--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,4 @@
 /* You can add global styles to this file, and also import other style files */
+body {
+  cursor: url('https://www.shareicon.net/data/128x128/2015/10/19/658726_music_512x512.png'), pointer;
+}
